fix spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2257,7 +2257,7 @@
 
 		}
 
-		@media screen and (max-width: 736px) {
+		@media screen and (max-width: 1470px) {
 
 			.features section {
 				padding: 2.5em 1.5em 0.1em 5.5em ;
